--- a/apps/editor/examples/example16-i18n.html
+++ b/apps/editor/examples/example16-i18n.html
@@ -30,7 +30,8 @@
     <script src="../dist/cdn/toastui-editor-all.js"></script>
     <script src="../dist/cdn/i18n/ko-kr.js"></script>
     <script type="text/babel" class="code-js">
-      import '@toast-ui/editor/dist/i18n/ko-kr';
+      // In order to set the desired multilingual in ESM environment, you should import our language module as below.
+      // import '@toast-ui/editor/dist/i18n/ko-kr';
 
       const editor = new toastui.Editor({
         el: document.querySelector('#editor'),
