wip: fix the wrong converting custom inline node

--- a/apps/editor/demo/esm/index.html
+++ b/apps/editor/demo/esm/index.html
@@ -58,7 +58,7 @@
         useCommandShortcut: true,
         extendedAutolinks: true,
         frontMatter: true,
-        initialValue: content,
+        initialValue: '$$xxx aaa$$',
       });
 
       window.editor = editor;
