chore: remove unnecessary comment
chore: revert initial value of demo

--- a/apps/editor/demo/esm/index.html
+++ b/apps/editor/demo/esm/index.html
@@ -58,7 +58,7 @@
         useCommandShortcut: true,
         extendedAutolinks: true,
         frontMatter: true,
-        initialValue: '$$xxx aaa$$',
+        initialValue: content,
       });
 
       window.editor = editor;
