feat: add editor interface with action in reducer

--- a/plugins/auto-complete/demo/editor.html
+++ b/plugins/auto-complete/demo/editor.html
@@ -96,6 +96,7 @@
               suggestionInfo.open = true;
               suggestionInfo.range = action.range;
               setSuggestion(suggestionEl);
+              console.log(action.instance);
               return true;
             case 'enter':
               console.log('entered suggestion');
