--- a/plugins/dooray-parser/demo/esm/index.html
+++ b/plugins/dooray-parser/demo/esm/index.html
@@ -34,6 +34,17 @@
       const options = {
         reDisabledParsing: {
           entity: reWidgetRule
+        },
+        // 각 키맵 행위에 대해 이 이후로 콜백을 막고 싶다면 return true;
+        customKeymap: {
+          'Mod-s': () => {
+            console.log('Mod-S');
+            return false;
+          },
+          'Mod-Enter': () => {
+            console.log('Mod-Enter');
+            return false;
+          },
         }
       }
 
@@ -42,7 +53,7 @@
         previewStyle: 'vertical',
         height: '500px',
         initialValue: '',
-        useCommandShortcut: false,
+        useCommandShortcut: true,
         widgetRules: [
           {
             rule: reWidgetRule,
