--- a/apps/editor/demo/esm/index.html
+++ b/apps/editor/demo/esm/index.html
@@ -19,7 +19,7 @@
         '',
         '## Create Instance',
         '',
-        'You can create an instance with the following code and use `getHtml()` and `getMarkdown()` of the [Editor](https://github.com/nhn/tui.editor).',
+        'You can create an instance with the following code and use `getHTML()` and `getMarkdown()` of the [Editor](https://github.com/nhn/tui.editor).',
         '',
         '```js',
         'const editor = new Editor(options);',
